--- a/index.css
+++ b/index.css
@@ -587,9 +587,9 @@ flex-wrap: wrap;
 margin-top: 20px;
 display: flex;
 justify-content: start;
-padding: 30px;
+padding:  30px;
 border-radius: 16px;
-width: 70%;
+width: 85%;
 height: 500px;
 background-color: #FFFFFF;
 }
@@ -598,7 +598,7 @@ border-radius: 16px;
 }
 .rightAchievements{
   width: 100%;
-  padding: 10px;
+  padding:  0 10px;
   display: flex;
   flex-direction: column;
  text-align: left;
@@ -608,10 +608,10 @@ border-radius: 16px;
   font-weight: 700;
   color: #0C1E34;
   line-height: 56px;
-  padding: 4px;
+  padding:  0 4px;
 }
 .rightAchievements p{
-  font-size: 30px;
+  font-size: 19px;
   width: 100%;
   word-break:keep-all;
 }
